--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+---
+---
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
+    <ul>
+      {% for post in site.posts %}
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+      {% endfor %}
+    </ul>
+  </body>
+</html>
