--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% include head.html %}
   </head>
   <body>
-    <ul>
-      {% for post in site.posts %}
-        <li>
-          <a href="{{ post.url }}">{{ post.title }}</a>
-        </li>
-      {% endfor %}
-    </ul>
+    <div class="container">
+      {% include header.html %}
+        {% for post in site.posts %}
+          <div class="row">
+            <a href="{{ post.url }}">{{ post.title }}</a>
+          </div>
+        {% endfor %}
+      {% include footer.html %}
+    </div>
   </body>
 </html>
