--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <div class="container">
       {% include header.html %}
+        <ul>
         {% for post in site.posts %}
-          <div class="row">
-            <a href="{{ post.url }}">{{ post.title }}</a>
-          </div>
+          <li><a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
+        </ul>
       {% include footer.html %}
     </div>
   </body>
