--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 <html>
   <head>
     {% include head.html %}
+    <style>
+    body ul {
+      line-height: 1.5em;
+      font-size: 16px;
+    }
+    </style>
   </head>
   <body>
     <div class="container">
+      <h1>博客列表</h1>
       {% include header.html %}
         <ul>
         {% for post in site.posts %}
