--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>博客列表</title>
+    <link rel="icon" href="/favicon.ico">
     {% include head.html %}
     <style>
     body ul {
